Precision variable fix

--- a/Loan Status Prediction Using ML.ipynb
+++ b/Loan Status Prediction Using ML.ipynb
@@ -1820,6 +1820,12 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "import numpy as np\n",
+    "\n",
+    "model_df = {}\n",
+    "\n",
     "def model_val(model, X, y):\n",
     "    # Check types\n",
     "    print(f\"Type of X: {type(X)}\")\n",
